--- a/server/server/templates/scorepage.html
+++ b/server/server/templates/scorepage.html
@@ -1,75 +1,80 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CAL</title>
-        <style>
-            /* Add some padding on document's body to prevent the content to go underneath the header and footer */
-            body {
-                padding-top: 60px;
-                padding-bottom: 40px;
-            }
-            .fixed-header,
-            .fixed-footer {
-                width: 100%;
-                position: fixed;
-                background: #333;
-                padding: 10px 0;
-                color: #fff;
-            }
-            .fixed-header {
-                top: 0;
-            }
-            .fixed-footer {
-                bottom: 0;
-            }
-            .container {
-                width: 80%;
-                margin: 0 auto; /* Center the DIV horizontally */
-            }
-            nav a {
-                color: #fff;
-                text-decoration: none;
-                padding: 7px 25px;
-                display: inline-block;
-            }
-        </style>
+        <title>IU5-75 Khizhnyakov Vadim DZ4</title>
+        <!-- ========== CACHE TURN OFF ========== -->
+        <meta http-equiv="cache-control" content="no-cache" />
+        <!-- ========== BOOTSTRAP CORE CSS ========== -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+        <!-- ========== SHARED STYLES ========== -->
+        <link rel="stylesheet" href="{% static 'css/scorepage.css' %}" />
     </head>
     <body>
-        <div class="fixed-header">
-            <div class="container"></div>
-        </div>
-        <div class="container">
-            <form
-                action="predictImage"
-                method="post"
-                enctype="multipart/form-data"
-            >
-                {% csrf_token %}
-
-                <div class="col-md-4 col-sm-4">
-                    <label for="FilePath">Select:</label>
+        <!-- As a link -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Домашняя страница</a>
+            </div>
+        </nav>
+        <div class="container mt-5">
+            <div class="row row-cols-2">
+                <div class="col">
+                    <!-- img -->
+                    {% if img_uri %}
+                    <img class="img-fluid w-100" src="{{ img_uri }}" />
+                    {% else %}
+                    <img
+                        class="img-fluid"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/2048px-No_image_available.svg.png"
+                    />
+                    {% endif %}
+                    <!-- score -->
+                    {% if scorePrediction %}
+                    <h3>Это - {{scorePrediction}}</h3>
+                    {% endif %}
                 </div>
-                <input accept="image/jpeg" name="filePath" type="file" /><br /><br />
-                <input type="submit" value="Submit" />
-            </form>
-        </div>
-        <div>
-            <br />
-            {% if scorePrediction %}
-            <h3>The classification is : {{scorePrediction}}</h3>
-            {% endif %}
-        </div>
+                <div class="col">
+                    <form
+                        action="predictImage"
+                        method="post"
+                        enctype="multipart/form-data"
+                    >
+                        {% csrf_token %}
 
-        <div>
-            {% if scorePrediction %}
-            <img src="{{ img_uri }}" />
-            {% endif %}
-        </div>
-        <div class="fixed-footer">
-            <div class="container"></div>
+                        <div class="mb-3">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="file"
+                                    name="filePath"
+                                    accept="image/jpeg"
+                                    class="form-control"
+                                    id="file-input"
+                                    aria-describedby="file-input"
+                                    aria-label="Upload"
+                                />
+                            </div>
+                        </div>
+                        <div class="mb-3 d-flex justify-content-end">
+                            <button
+                                type="submit"
+                                class="btn btn-primary mb-3 ml-auto"
+                            >
+                                Отправить
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </body>
 </html>
